--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="hoodies.html" class="item"><img src="hoodies main.png" alt="Hoodies"><h3>Hoodies</h3></a>
       <a href="jackets.html" class="item"><img src="main-jacket.png" alt="Jackets"><h3>Jackets</h3></a>
       <a href="shirts.html" class="item"><img src="Shirts main.png" alt="Shirts"><h3>Shirts</h3></a>
-      <a href="tshirts.html" class="item"><img src="t-shirt .main.png" alt="T-Shirts"><h3>T-Shirts</h3></a>
+      <a href="tshirts.html" class="item"><img src="shirtsmain.png" alt="T-Shirts"><h3>T-Shirts</h3></a>
       <a href="pants.html" class="item"><img src="main-pant.png" alt="Pants"><h3>Pants</h3></a>
       <a href="accessories.html" class="item"><img src="associries.png" alt="Accessories"><h3>Accessories</h3></a>
     </div>
